# BIGRCarotid-UI

./: CMakeLists.txt  README.md
medialness/: CMakeLists.txt
